[project]
name = "prompt-refiner"
version = "0.1.0"
description = "A modern Python package to automatically improve prompts using Claude or Ollama"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Wescott", email = "hi@wescott.sh"}]
keywords = ["prompt", "llm", "claude", "ollama", "ai", "refinement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.18.0"]
ollama = ["httpx>=0.25.0"]
all = ["anthropic>=0.18.0", "httpx>=0.25.0"]

[project.urls]
Homepage = "https://github.com/wescott-sh/prompt-refiner"
Repository = "https://github.com/wescott-sh/prompt-refiner"
Issues = "https://github.com/wescott-sh/prompt-refiner/issues"

[project.scripts]
prompt-refiner = "prompt_refiner.cli:app"
refine = "prompt_refiner.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "types-pyyaml>=6.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]  # Line too long

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["prompt_refiner"]
omit = ["*/tests/*", "*/__main__.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompt_refiner"]